# alliance_auto_aim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
env/: ubuntu22.04.sh
include/: event_bus.hpp  sync_data_processor.hpp  system_factory.hpp  visualization.hpp
include/data/: armor_camera_spacing.hpp  armor_gimbal_control_spacing.hpp  armor_image_spaceing.hpp  fire_control.hpp  rmcs_sync_data.hpp  sync_data.hpp
include/enum/: armor_id.hpp  car_id.hpp  enum_tools.hpp  system_version.hpp
include/interfaces/: armor_in_camera.hpp  armor_in_gimbal_control.hpp  armor_in_image.hpp  car_state.hpp  drawable.hpp  fire_controller.hpp  identifier.hpp  pnp_solver.hpp  predictor.hpp  predictor_update_package.hpp  sync_block.hpp  sync_load.hpp  sync_load_armor.hpp  target_predictor.hpp  time_stamped.hpp
include/parameters/: params_system_v1.hpp  profile.hpp
src/core/: system_factory.cpp
src/util/: cast.cpp  index.hpp  math.hpp  scanline.hpp  sync_data_processor.cpp  visaulization.cpp
src/util/parameters/: params_system_v1.cpp  profile.cpp
src/util/profile/: profile.cpp  profile.hpp
src/v1/: auto_aim_system_v1.cpp  auto_aim_system_v1.hpp  workflow.puml
src/v1/fire_controller/: fire_controller.cpp  fire_controller.hpp  trajectory.hpp
src/v1/identifier/: identifier.cpp  identifier.hpp  identifier_armor.hpp  identifier_time_stamp.hpp
src/v1/pnpsolver/: armor_pnp_solver.cpp  armor_pnp_solver.hpp
src/v1/predictor/: predict_armor_in_gimbal_control.cpp  predict_armor_in_gimbal_control.hpp  predict_time_stamp.hpp  predictor_manager.cpp  predictor_manager.hpp
src/v1/predictor/car/: car_predictor.cpp  car_predictor.hpp  car_predictor_ekf.hpp
src/v1/state_machine/: state_machine.cpp
src/v1/syncer/: sync_data.hpp  syncer.cpp  syncer.hpp  update_package.cpp  update_package.hpp
